[gd_scene load_steps=13 format=3 uid="uid://d28hb81gv3e5x"]

[ext_resource type="Script" uid="uid://cvf2euci2s4n6" path="res://script/obstacle.gd" id="1_nmnoa"]
[ext_resource type="Shader" uid="uid://d3tyrfwlw2c1g" path="res://asset/shader/LightweightPixelPerfectOutline.gdshader" id="2_a3v8d"]
[ext_resource type="SpriteFrames" uid="uid://b7mr84awj2n53" path="res://asset/animation/elf/elfArcaneArcher.tres" id="3_5otqy"]
[ext_resource type="Script" uid="uid://pmtyv1bl3nog" path="res://script/drag_handler.gd" id="4_bxaxu"]
[ext_resource type="Script" uid="uid://c101twvdkyo0l" path="res://script/area_effect_handler.gd" id="7_g5tws"]
[ext_resource type="Script" uid="uid://f2vi2gwgn32i" path="res://script/effect_handler.gd" id="8_u2b7o"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dbi3s"]
shader = ExtResource("2_a3v8d")
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/blink_color = Color(1, 1, 1, 1)
shader_parameter/blink_time_scale = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_10qbj"]
size = Vector2(10, 12)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jr182"]
bg_color = Color(0.301961, 0.101961, 0.0117647, 0.498039)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mccdw"]
bg_color = Color(0, 0.87451, 0, 0.498039)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.301961, 0.101961, 0.0117647, 0.498039)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dbi3s"]
bg_color = Color(0.301961, 0.101961, 0.0117647, 0.498039)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_heiwi"]
bg_color = Color(0.211765, 0.898039, 0.937255, 0.498039)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.301961, 0.101961, 0.0117647, 0.498039)

[node name="Obstacle" type="Node2D"]
z_index = 1
y_sort_enabled = true
script = ExtResource("1_nmnoa")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 3
y_sort_enabled = true
material = SubResource("ShaderMaterial_dbi3s")
position = Vector2(0, -11)
sprite_frames = ExtResource("3_5otqy")
animation = &"block"
autoplay = "idle"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -13)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 11)
shape = SubResource("RectangleShape2D_10qbj")

[node name="idle_timer" type="Timer" parent="."]
wait_time = 2.0

[node name="action_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="attack_target_line" type="Line2D" parent="."]
visible = false

[node name="spell_target_line" type="Line2D" parent="."]
visible = false

[node name="drag_handler" type="Node2D" parent="."]
script = ExtResource("4_bxaxu")

[node name="hp_bar" type="ProgressBar" parent="."]
offset_left = -8.0
offset_top = -20.0
offset_right = 8.0
offset_bottom = -16.0
theme_override_styles/background = SubResource("StyleBoxFlat_jr182")
theme_override_styles/fill = SubResource("StyleBoxFlat_mccdw")
value = 50.0
show_percentage = false

[node name="mp_bar" type="ProgressBar" parent="."]
offset_left = -8.0
offset_top = -15.0
offset_right = 8.0
offset_bottom = -11.0
theme_override_styles/background = SubResource("StyleBoxFlat_dbi3s")
theme_override_styles/fill = SubResource("StyleBoxFlat_heiwi")
value = 50.0
show_percentage = false

[node name="area_effect_handler" type="Node2D" parent="."]
script = ExtResource("7_g5tws")

[node name="effect_handler" type="Node" parent="."]
script = ExtResource("8_u2b7o")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="idle_timer" to="." method="_on_idle_timeout"]
[connection signal="timeout" from="action_timer" to="." method="_handle_action_timeout"]
